--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section id="about" class="section-spacing bg-black text-white overflow-hidden">
+<section id="about" class="section-spacing bg-[#050505] text-white overflow-hidden">
     <div class="container-custom">
         <div class="flex flex-col xl:flex-row gap-12 xl:gap-16">
 
@@ -31,7 +31,7 @@
                 </div>
             </div>
 
-            <div class="xl:w-1/2 bg-[#111111] border border-white/5 p-8 md:p-12 flex flex-col justify-center">
+            <div class="xl:w-1/2 bg-black/50 border border-white/10 p-8 md:p-12 flex flex-col justify-center">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-10 md:gap-12">
 
                     <div class="flex flex-col">
