--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,11 +16,15 @@
 
   .site-diagonal::after {
     content: "";
-    @apply absolute top-0 right-0 w-1/3 h-full bg-red-600/6;
-
-    transform: skewX(12deg) translateX(50%);
-    height: 100vh;
     position: fixed;
+    top: 0;
+    right: 0;
+    width: 35%;
+    height: 100vh;
+    background-color: rgba(220, 38, 38, 0.07);
+    transform: skewX(12deg) translateX(40%);
+    mix-blend-mode: screen;
+    pointer-events: none;
   }
 
   @media (min-width: 350px) {
