--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,5 @@
 <section
-    class="hero-bg relative flex flex-col items-start overflow-hidden bg-[#1a1a1a] mx-auto w-full max-w-[350px] md:max-w-[768px] xl:max-w-[1280px] py-6 md:py-12"
+    class="hero-bg  relative flex flex-col items-start overflow-hidden bg-black mx-auto w-full max-w-[350px] md:max-w-[768px] xl:max-w-[1280px] py-6 md:py-12"
     id="hero">
     <div class="container-custom relative z-10 w-full">
         <div class="flex flex-col">
