--- a/src/partials/news.html
+++ b/src/partials/news.html
@@ -1,4 +1,4 @@
-<section id="news" class="section-spacing bg-blackflow-hidden border-t border-white/5">
+<section id="news" class="section-spacing bg-black overflow-hidden border-t border-white/5">
     <div class="container-custom">
         <div class="flex items-end justify-between mb-8">
             <div>
