remove mobile-menu css, add z-index to header

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header id="main-header" class="sticky top-0 left-0 w-full bg-[#050505] transition-all duration-300 z-50">
+<header id="main-header" class="sticky top-0 left-0 w-full bg-[#050505] transition-all duration-300 z-[110]">
     <div class="bg-black/40 border-b border-white/5 py-2">
         <div class="container-custom flex justify-end items-center gap-8">
             <div class="flex items-center gap-6 text-white text-xl">
@@ -20,7 +20,7 @@
                 </a>
             </div>
 
-            <div id="lang-dropdown" class="relative group inline-block">
+            <div id="lang-dropdown" class="relative group inline-block ">
                 <button id="lang-btn" type="button"
                     class="flex items-center gap-2 text-[12px] font-black text-white uppercase tracking-widest cursor-pointer py-2">
                     <span id="current-lang" class="text-red-600">BE</span>
@@ -29,7 +29,7 @@
 
                 <div
                     class="absolute right-0 top-full w-24 pt-1 hidden group-hover:block group-[.is-active]:block z-[100]">
-                    <div class="bg-[#1a1a1a] border border-white/10 py-2 shadow-2xl relative">
+                    <div class="bg-[#050505] border border-white/10 py-2 shadow-2xl relative">
                         <a href="#" data-lang="be"
                             class="lang-switch block px-4 py-2 text-white hover:text-red-600 hover:bg-white/5 transition-all text-[12px] font-black uppercase tracking-widest relative z-[110]">BE</a>
                         <a href="#" data-lang="uk"
