change color of dropdown menu in headr

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -71,7 +71,7 @@
                                 class="fa-solid fa-chevron-down text-[8px] transition-transform group-hover:rotate-180"></i>
                         </a>
                         <div
-                            class="absolute top-full left-0 w-64 bg-[#1a1a1a] border border-white/5 opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200 shadow-2xl">
+                            class="absolute top-full left-0 w-64 bg-[#050505] border border-white/10 opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200 shadow-2xl">
                             <a href="/src/pages/projects.html" data-i18n="nav.projects"
                                 class="block px-6 py-4 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Праекты</a>
                             <a href="/src/pages/history.html" data-i18n="nav.history_long"
@@ -101,7 +101,7 @@
                                 class="fa-solid fa-chevron-down text-[8px] transition-transform group-hover:rotate-180"></i>
                         </a>
                         <div
-                            class="absolute top-full left-0 w-64 bg-[#1a1a1a] border border-white/5 opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200 shadow-2xl">
+                            class="absolute top-full left-0 w-64 bg-[#050505] border border-white/10 opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200 shadow-2xl">
                             <a href="/src/pages/get-help.html" data-i18n="nav.get_help"
                                 class="block px-6 py-4 text-[10px] text-gray-400 hover:bg-black hover:text-red-600 border-b border-white/5">Атрымаць
                                 дапамогу</a>
